--- a/index.html
+++ b/index.html
@@ -11,157 +11,168 @@
     />
     <link
       rel="stylesheet"
-      href="node_modules/modern-normalize/modern-normalize.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--Шапка-->
     <header class="header">
-      <nav class="header-nav">
-        <a href="/" class="header-logo"
-          ><span class="logo-web">Web</span>Studio</a
-        >
+      <div class="container">
+        <nav class="header-nav">
+          <a href="/" class="header-logo"
+            ><span class="logo-web">Web</span>Studio</a
+          >
 
+          <ul class="header-list list">
+            <li class="header-iten">
+              <a href="" class="header-link curnet">Студія</a>
+            </li>
+            <li class="header-iten">
+              <a href="./portfolio.html" class="header-link">Портфоліо</a>
+            </li>
+            <li class="header-iten">
+              <a href="" class="header-link">Контакти</a>
+            </li>
+          </ul>
+        </nav>
         <ul class="header-list list">
-          <li class="header-iten">
-            <a href="" class="header-link curnet">Студія</a>
+          <li>
+            <a href="mailto:info@devstudio.com" class="header-mail"
+              >info@devstudio.com</a
+            >
           </li>
-          <li class="header-iten">
-            <a href="./portfolio.html" class="header-link">Портфоліо</a>
-          </li>
-          <li class="header-iten">
-            <a href="" class="header-link">Контакти</a>
+          <li>
+            <a href="tel:+380961111111" class="header-tel">+380961111111</a>
           </li>
         </ul>
-      </nav>
-      <ul class="header-list list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="header-mail"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="header-tel">+380961111111</a>
-        </li>
-      </ul>
+      </div>
     </header>
     <!-- Уникальный контент страницы -->
     <main>
       <!--Герой-->
-      <div>
-        <section class="hero">
+      <div class="container">
+        <section class="hero section">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button type="submit" class="hero-button">Замовити послугу</button>
         </section>
       </div>
       <!--Преимущества-->
-      <section class="benefits">
-        <ul class="benefits-list list">
-          <li>
-            <h3 class="benefits-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="benefits-paragraf">
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
-            </p>
-          </li>
-          <li>
-            <h3 class="benefits-title">ПУНКТУАЛЬНІСТЬ</h3>
-            <p class="benefits-paragraf">
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
-            </p>
-          </li>
-          <li>
-            <h3 class="benefits-title">ПЛАНУВАННЯ</h3>
-            <p class="benefits-paragraf">
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
-          <li>
-            <h3 class="benefits-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p class="benefits-paragraf">
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
-            </p>
-          </li>
-        </ul>
+      <section class="benefits section">
+        <div class="container">
+          <ul class="benefits-list list">
+            <li>
+              <h3 class="benefits-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="benefits-paragraf">
+                Ідейні міркування, і навіть початок повсякденної роботи з
+                формування позиції.
+              </p>
+            </li>
+            <li>
+              <h3 class="benefits-title">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="benefits-paragraf">
+                Завдання організації, особливо рамки і місце навчання кадрів
+                тягне у себе.
+              </p>
+            </li>
+            <li>
+              <h3 class="benefits-title">ПЛАНУВАННЯ</h3>
+              <p class="benefits-paragraf">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li>
+              <h3 class="benefits-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="benefits-paragraf">
+                Значимість цих проблем настільки очевидна, що реалізація
+                планових завдань.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--Примеры рабрт-->
-      <section class="examples">
-        <h2 class="examples-title">Чим ми займаємося</h2>
-        <ul class="examples-list list">
-          <li>
-            <img
-              src="./images/box1.jpg"
-              alt="html and css"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/box2.jpg"
-              alt="javascript"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/box3.jpg"
-              alt="design"
-              width="370"
-              height="294"
-            />
-          </li>
-        </ul>
+      <section class="examples section borders">
+        <div class="container">
+          <h2 class="examples-title">Чим ми займаємося</h2>
+          <ul class="examples-list list">
+            <li>
+              <img
+                src="./images/box1.jpg"
+                alt="html and css"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/box2.jpg"
+                alt="javascript"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/box3.jpg"
+                alt="design"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!--Наша команда-->
-      <section class="team">
-        <h2 class="team-title">Наша команда</h2>
-        <ul class="team-list list">
-          <li>
-            <img
-              src="./images/img1.jpg"
-              alt="парень image"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-name">Ігор Дем'яненко</h3>
-            <p class="team-item">Designer</p>
-          </li>
-          <li>
-            <img
-              src="./images/img2.jpg"
-              alt="девушка image"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-name">Ольга Рєпіна</h3>
-            <p class="team-item">Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./images/img3.jpg"
-              alt="парень image"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-name">Микола Тарасов</h3>
-            <p class="team-item">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/img4.jpg"
-              alt="парень image"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-name">Михайло Єрмаков</h3>
-            <p class="team-item">UI Designer</p>
-          </li>
-        </ul>
+      <section class="team section">
+        <div class="container">
+          <h2 class="team-title">Наша команда</h2>
+          <ul class="team-list list">
+            <li>
+              <img
+                src="./images/img1.jpg"
+                alt="парень image"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-name">Ігор Дем'яненко</h3>
+              <p class="team-item">Designer</p>
+            </li>
+            <li>
+              <img
+                src="./images/img2.jpg"
+                alt="девушка image"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-name">Ольга Рєпіна</h3>
+              <p class="team-item">Frontend Developer</p>
+            </li>
+            <li>
+              <img
+                src="./images/img3.jpg"
+                alt="парень image"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-name">Микола Тарасов</h3>
+              <p class="team-item">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/img4.jpg"
+                alt="парень image"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-name">Михайло Єрмаков</h3>
+              <p class="team-item">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!--Подвал-->
