--- a/portfolio.html
+++ b/portfolio.html
@@ -11,162 +11,175 @@
     />
     <link
       rel="stylesheet"
-      href="node_modules/modern-normalize/modern-normalize.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--Шапка-->
     <header class="header">
-      <nav class="header-nav">
-        <a href="/" class="header-logo"
-          ><span class="logo-web">Web</span>Studio</a
-        >
+      <div class="container">
+        <nav class="header-nav">
+          <a href="/" class="header-logo"
+            ><span class="logo-web">Web</span>Studio</a
+          >
 
+          <ul class="header-list list">
+            <li class="header-iten">
+              <a href="./" class="header-link">Студія</a>
+            </li>
+            <li class="header-iten">
+              <a href="./index.html" class="header-link port">Портфоліо</a>
+            </li>
+            <li class="header-iten">
+              <a href="" class="header-link">Контакти</a>
+            </li>
+          </ul>
+        </nav>
         <ul class="header-list list">
-          <li class="header-iten">
-            <a href="./" class="header-link">Студія</a>
+          <li>
+            <a href="mailto:info@devstudio.com" class="header-mail"
+              >info@devstudio.com</a
+            >
           </li>
-          <li class="header-iten">
-            <a href="./index.html" class="header-link port">Портфоліо</a>
-          </li>
-          <li class="header-iten">
-            <a href="" class="header-link">Контакти</a>
+          <li>
+            <a href="tel:+380961111111" class="header-tel">+380961111111</a>
           </li>
         </ul>
-      </nav>
-      <ul class="header-list list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="header-mail"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="header-tel">+380961111111</a>
-        </li>
-      </ul>
+      </div>
     </header>
     <main>
       <!--filters-->
       <section class="filtres">
-        <h1 class="visually-hidden">кнопки</h1>
-        <ul class="filtres-button list">
-          <li><button type="button" class="filtres-btn">Все</button></li>
-          <li><button type="button" class="filtres-btn">Веб-сайти</button></li>
-          <li><button type="button" class="filtres-btn">Додатки</button></li>
-          <li><button type="button" class="filtres-btn">Дизайн</button></li>
-          <li><button type="button" class="filtres-btn">Маркетинг</button></li>
-        </ul>
-        <ul class="section-portfolio list">
-          <li class="portfolio-item">
-            <a href="./" class="link">
-              <img
-                src="./images/port1.jpg"
-                alt="Технокряк"
-                width="370"
-                height="294"
-              />
-              <h2 class="portfolio-title">Технокряк</h2>
-              <p class="portfolio-text-title">Веб-сайт</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a href="./" class="link">
-              <img
-                src="./images/port2.jpg"
-                alt="Дизайн"
-                width="370"
-                height="294"
-              />
-              <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-              <p class="portfolio-text-title">Дизайн</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a href="./" class="link">
-              <img
-                src="./images/port3.jpg"
-                alt="Ресторан Seafood"
-                width="370"
-                height="294"
-              />
-              <h2 class="portfolio-title">Ресторан Seafood</h2>
-              <p class="portfolio-text-title">Додаток</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a href="./" class="link">
-              <img
-                src="./images/port4.jpg"
-                alt="Проект Prime"
-                width="370"
-                height="294"
-              />
-              <h2 class="portfolio-title">Проект Prime</h2>
-              <p class="portfolio-text-title">Маркетинг</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a href="./" class="link">
-              <img
-                src="./images/port5.jpg"
-                alt="Проект Boxes"
-                width="370"
-                height="294"
-              />
-              <h2 class="portfolio-title">Проект Boxes</h2>
-              <p class="portfolio-text-title">Додаток</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a href="./" class="link">
-              <img
-                src="./images/port6.jpg"
-                alt="Inspiration has no Borders"
-                width="370"
-                height="294"
-              />
-              <h2 class="portfolio-title">Inspiration has no Borders</h2>
-              <p class="portfolio-text-title">Веб-сайт</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a href="./" class="link">
-              <img
-                src="./images/port7.jpg"
-                alt="Издание Limited Edition"
-                width="370"
-                height="294"
-              />
-              <h2 class="portfolio-title">Видання Limited Edition</h2>
-              <p class="portfolio-text-title">Дизайн</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a href="./" class="link">
-              <img
-                src="./images/port8.jpg"
-                alt="Проект LAB"
-                width="370"
-                height="294"
-              />
-              <h2 class="portfolio-title">Проект LAB</h2>
-              <p class="portfolio-text-title">Маркетинг</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a href="./" class="link">
-              <img
-                src="./images/port9.jpg"
-                alt="Growing Business"
-                width="370"
-                height="294"
-              />
-              <h2 class="portfolio-title">Growing Business</h2>
-              <p class="portfolio-text-title">Додаток</p>
-            </a>
-          </li>
-        </ul>
+        <div class="container">
+          <h1 class="visually-hidden">кнопки</h1>
+          <ul class="filtres-button list">
+            <li><button type="button" class="filtres-btn">Все</button></li>
+            <li>
+              <button type="button" class="filtres-btn">Веб-сайти</button>
+            </li>
+            <li><button type="button" class="filtres-btn">Додатки</button></li>
+            <li><button type="button" class="filtres-btn">Дизайн</button></li>
+            <li>
+              <button type="button" class="filtres-btn">Маркетинг</button>
+            </li>
+          </ul>
+          <ul class="section-portfolio list">
+            <li class="portfolio-item">
+              <a href="./" class="link">
+                <img
+                  src="./images/port1.jpg"
+                  alt="Технокряк"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="portfolio-title">Технокряк</h2>
+                <p class="portfolio-text-title">Веб-сайт</p>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="./" class="link">
+                <img
+                  src="./images/port2.jpg"
+                  alt="Дизайн"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="portfolio-title">
+                  Постер New Orlean vs Golden Star
+                </h2>
+                <p class="portfolio-text-title">Дизайн</p>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="./" class="link">
+                <img
+                  src="./images/port3.jpg"
+                  alt="Ресторан Seafood"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="portfolio-title">Ресторан Seafood</h2>
+                <p class="portfolio-text-title">Додаток</p>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="./" class="link">
+                <img
+                  src="./images/port4.jpg"
+                  alt="Проект Prime"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="portfolio-title">Проект Prime</h2>
+                <p class="portfolio-text-title">Маркетинг</p>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="./" class="link">
+                <img
+                  src="./images/port5.jpg"
+                  alt="Проект Boxes"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="portfolio-title">Проект Boxes</h2>
+                <p class="portfolio-text-title">Додаток</p>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="./" class="link">
+                <img
+                  src="./images/port6.jpg"
+                  alt="Inspiration has no Borders"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="portfolio-title">Inspiration has no Borders</h2>
+                <p class="portfolio-text-title">Веб-сайт</p>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="./" class="link">
+                <img
+                  src="./images/port7.jpg"
+                  alt="Издание Limited Edition"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="portfolio-title">Видання Limited Edition</h2>
+                <p class="portfolio-text-title">Дизайн</p>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="./" class="link">
+                <img
+                  src="./images/port8.jpg"
+                  alt="Проект LAB"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="portfolio-title">Проект LAB</h2>
+                <p class="portfolio-text-title">Маркетинг</p>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="./" class="link">
+                <img
+                  src="./images/port9.jpg"
+                  alt="Growing Business"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="portfolio-title">Growing Business</h2>
+                <p class="portfolio-text-title">Додаток</p>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="header-futer">
