--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
   <body>
     <!--Шапка-->
     <header class="header">
-      <div class="container">
+      <div class="container header-container">
         <nav class="header-nav">
           <a href="/" class="header-logo"
             ><span class="logo-web">Web</span>Studio</a
           >
-
           <ul class="header-list list">
             <li class="header-iten">
               <a href="" class="header-link curnet">Студія</a>
@@ -40,26 +39,29 @@
           </ul>
         </nav>
         <ul class="header-list list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="header-mail"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+380961111111" class="header-tel">+380961111111</a>
-          </li>
+          <div class="header-connect">
+            <li>
+              <a class="header-mail" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="header-tel" href="tel:+380961111111">+380961111111</a>
+            </li>
+          </div>
         </ul>
       </div>
     </header>
     <!-- Уникальный контент страницы -->
     <main>
       <!--Герой-->
-      <div class="container">
-        <section class="hero section">
+      <section class="hero">
+        <div class="container section">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button type="submit" class="hero-button">Замовити послугу</button>
-        </section>
-      </div>
+        </div>
+      </section>
+
       <!--Преимущества-->
       <section class="benefits section">
         <div class="container">
