--- a/portfolio.html
+++ b/portfolio.html
@@ -19,14 +19,12 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!--Шапка-->
     <header class="header">
-      <div class="container">
+      <div class="container header-container">
         <nav class="header-nav">
           <a href="/" class="header-logo"
             ><span class="logo-web">Web</span>Studio</a
           >
-
           <ul class="header-list list">
             <li class="header-iten">
               <a href="./" class="header-link">Студія</a>
@@ -40,14 +38,16 @@
           </ul>
         </nav>
         <ul class="header-list list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="header-mail"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+380961111111" class="header-tel">+380961111111</a>
-          </li>
+          <div class="header-connect">
+            <li>
+              <a class="header-mail" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="header-tel" href="tel:+380961111111">+380961111111</a>
+            </li>
+          </div>
         </ul>
       </div>
     </header>
