--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <main>
       <!--Герой-->
       <section class="hero">
-        <div class="container hero-section">
+        <div class="container hero-section section">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button type="submit" class="hero-button">Замовити послугу</button>
         </div>
