--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </ul>
         </nav>
 
-        <!-- header contacts -->
+        <!-- Шапка  contacts -->
 
         <ul class="contacts-list list box">
           <li class="contacts-item">
