--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!-- header navigation -->
+    <!-- Шапка  -->
     <header class="header">
       <div class="conteiner box">
         <div class="logo">
@@ -47,7 +47,7 @@
           </ul>
         </nav>
 
-        <!-- header contacts -->
+        <!-- Шапка contacts -->
 
         <ul class="contacts-list list box">
           <li class="contacts-item">
@@ -66,31 +66,31 @@
     <!-- main -->
     <main>
       <!-- Examples -->
-      <section class="works section">
+      <section class="portfolio section">
         <!-- Заголовок має бути прихований -->
         <div class="conteiner addmb">
           <h1 class="works-title visually-hidden">Зразки наших робіт</h1>
-          <ul class="works-buttons list">
-            <li class="works-btn-item">
-              <button type="button" class="works-btn">Всі</button>
+          <ul class="portfolio-buttons list">
+            <li class="portfolio-btn-item">
+              <button type="button" class="portfolio-btn">Всі</button>
             </li>
-            <li class="works-btn-item">
-              <button type="button" class="works-btn">Веб-сайти</button>
+            <li class="portfolio-btn-item">
+              <button type="button" class="portfolio-btn">Веб-сайти</button>
             </li>
-            <li class="works-btn-item">
-              <button type="button" class="works-btn">Додатки</button>
+            <li class="portfolio-btn-item">
+              <button type="button" class="portfolio-btn">Додатки</button>
             </li>
-            <li class="works-btn-item">
-              <button type="button" class="works-btn">Дизайн</button>
+            <li class="portfolio-btn-item">
+              <button type="button" class="portfolio-btn">Дизайн</button>
             </li>
-            <li class="works-btn-item">
-              <button type="button" class="works-btn">Маркетинг</button>
+            <li class="portfolio-btn-item">
+              <button type="button" class="portfolio-btn">Маркетинг</button>
             </li>
           </ul>
         </div>
         <div class="conteiner">
-          <ul class="works-list list">
-            <li class="works-item">
+          <ul class="portfolio-list list">
+            <li class="portfolio-item">
               <a class="works-item-link link" href="">
                 <img
                   src="./images/port1.jpg"
@@ -98,104 +98,106 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="works-subtitle">Технокач</h2>
-                <p class="works-text">Веб-сайт</p>
+                <h2 class="portfolio-subtitle">Технокач</h2>
+                <p class="portfolio-text">Веб-сайт</p>
               </a>
             </li>
-            <li class="works-item">
-              <a class="works-item-link link" href="">
+            <li class="portfolio-item">
+              <a class="portfolio-item-link link" href="">
                 <img
                   src="./images/port2.jpg"
                   alt="basketball players"
                   width="370"
                   height="294"
                 />
-                <h2 class="works-subtitle">Постер New Orlean vs Golden Star</h2>
-                <p class="works-text">Дизайн</p>
+                <h2 class="portfolio-subtitle">
+                  Постер New Orlean vs Golden Star
+                </h2>
+                <p class="portfolio-text">Дизайн</p>
               </a>
             </li>
-            <li class="works-item">
-              <a class="works-item-link link" href="">
+            <li class="portfolio-item">
+              <a class="portfolio-item-link link" href="">
                 <img
                   src="./images/port3.jpg"
                   alt="restaurant logo"
                   width="370"
                   height="294"
                 />
-                <h2 class="works-subtitle">Ресторан Seafood</h2>
-                <p class="works-text">Додаток</p>
+                <h2 class="portfolio-subtitle">Ресторан Seafood</h2>
+                <p class="portfolio-text">Додаток</p>
               </a>
             </li>
-            <li class="works-item">
-              <a class="works-item-link link" href="">
+            <li class="portfolio-item">
+              <a class="portfolio-item-link link" href="">
                 <img
                   src="./images/port4.jpg"
                   alt="headearphones"
                   width="370"
                   height="294"
                 />
-                <h2 class="works-subtitle">Проєкт Prime</h2>
-                <p class="works-text">Маркетинг</p>
+                <h2 class="portfolio-subtitle">Проєкт Prime</h2>
+                <p class="portfolio-text">Маркетинг</p>
               </a>
             </li>
-            <li class="works-item">
-              <a class="works-item-link link" href="">
+            <li class="portfolio-item">
+              <a class="portfolio-item-link link" href="">
                 <img
                   src="./images/port5.jpg"
                   alt="boxes"
                   width="370"
                   height="294"
                 />
-                <h2 class="works-subtitle">Проєкт Boxes</h2>
-                <p class="works-text">Додаток</p>
+                <h2 class="portfolio-subtitle">Проєкт Boxes</h2>
+                <p class="portfolio-text">Додаток</p>
               </a>
             </li>
-            <li class="works-item">
-              <a class="works-item-link link" href=""
+            <li class="portfolio-item">
+              <a class="portfolio-item-link link" href=""
                 ><img
                   src="./images/port6.jpg"
                   alt="displaying the site on monitor"
                   width="370"
                   height="294"
                 />
-                <h2 class="works-subtitle">Inspiration has no Borders</h2>
-                <p class="works-text">Веб-сайт</p></a
+                <h2 class="portfolio-subtitle">Inspiration has no Borders</h2>
+                <p class="portfolio-text">Веб-сайт</p></a
               >
             </li>
-            <li class="works-item">
-              <a class="works-item-link link" href="">
+            <li class="portfolio-item">
+              <a class="portfolio-item-link link" href="">
                 <img
                   src="./images/port7.jpg"
                   alt="open book"
                   width="370"
                   height="294"
                 />
-                <h2 class="works-subtitle">Видання Limited Edition</h2>
-                <p class="works-text">Дизайн</p>
+                <h2 class="portfolio-subtitle">Видання Limited Edition</h2>
+                <p class="portfolio-text">Дизайн</p>
               </a>
             </li>
-            <li class="works-item">
-              <a class="works-item-link link" href="">
+            <li class="portfolio-item">
+              <a class="portfolio-item-link link" href="">
                 <img
                   src="./images/port8.jpg"
                   alt="bage with name of company"
                   width="370"
                   height="294"
                 />
-                <h2 class="works-subtitle">Проєкт LAB</h2>
-                <p class="works-text">Маркетинг</p>
+                <h2 class="portfolio-subtitle">Проєкт LAB</h2>
+                <p class="portfolio-text">Маркетинг</p>
               </a>
             </li>
-            <li class="works-item">
-              <a class="works-item-link link" href="">
+            <li class="portfolio-item">
+              <a class="portfolio-item-link link" href="">
                 <img
                   src="./images/port9.jpg"
                   alt="man typing on laptop"
                   width="370"
                   height="294"
                 />
-                <h2 class="works-subtitle">Growing Business</h2>
-                <p class="works-text">Додаток</p>
+                <h2 class="portfolio-subtitle">Growing Business</h2>
+                <p class="portfolio-text">Додаток</p>
               </a>
             </li>
           </ul>
