--- a/index.html
+++ b/index.html
@@ -22,11 +22,10 @@
     <!--Шапка -->
     <header class="header">
       <div class="conteiner box">
-        <div class="logo">
-          <a href="/" class="header-logo link"
-            ><span class="logo-text">Web</span>Studio</a
-          >
-        </div>
+        <a href="/" class="header-logo link"
+          ><span class="logo-text">Web</span>Studio</a
+        >
+
         <nav>
           <ul class="header-list list box">
             <li class="header-item">
@@ -131,45 +130,52 @@
           <ul class="team-list list">
             <li class="team-item">
               <img src="./images/img1.jpg" alt="Ігор Дем'яненко" width="270" />
-              <h3 class="team-name">Ігор Дем'яненко</h3>
-              <p class="team-text">Product Designer</p>
+              <div class="team-padding">
+                <h3 class="team-name">Ігор Дем'яненко</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
             </li>
-
             <li class="team-item">
               <img src="./images/img2.jpg" alt="Ольга Репіна" width="270" />
-              <h3 class="team-name">Ольга Репіна</h3>
-              <p class="team-text">Frontend Developer</p>
+              <div class="team-padding">
+                <h3 class="team-name">Ольга Репіна</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img src="./images/img3.jpg" alt="Микола Тарасов" width="270" />
-              <h3 class="team-name">Микола Тарасов</h3>
-              <p class="team-text">Marketing</p>
+              <div class="team-padding">
+                <h3 class="team-name">Микола Тарасов</h3>
+                <p class="team-text">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img src="./images/img4.jpg" alt="Михайло Єрмаков" width="270" />
-              <h3 class="team-name">Михайло Єрмаков</h3>
-              <p class="team-text">UI Designer</p>
+              <div class="team-padding">
+                <h3 class="team-name">Михайло Єрмаков</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
       </section>
     </main>
     <!-- footer -->
-    <footer class="basement">
-      <div class="basement-conteiner">
-        <a href="/" class="basement-logo link"
+    <footer class="footer">
+      <div class="conteiner">
+        <a href="/" class="footer-logo link"
           ><span class="logo-text">Web</span>Studio</a
         >
-        <address class="basement-address">
-          <p class="basement-text">м. Київ, пр-т Лесі Українки, 26</p>
-          <ul class="basement-list list">
-            <li>
-              <a href="mailto:info@devstudio.com" class="basement-contacts link"
+        <address class="footer-address">
+          <p class="footer-text">м. Київ, пр-т Лесі Українки, 26</p>
+          <ul class="footer-list list">
+            <li class="footer-item">
+              <a href="mailto:info@devstudio.com" class="footer-contacts link"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
-              <a href="tel:+380961111111" class="basement-contacts link"
+            <li class="footer-item">
+              <a href="tel:+380961111111" class="footer-contacts link"
                 >+38 096 111 11 11</a
               >
             </li>
