--- a/portfolio.html
+++ b/portfolio.html
@@ -67,8 +67,7 @@
     <main>
       <!-- Examples -->
       <section class="portfolio section">
-        <!-- Заголовок має бути прихований -->
-        <div class="conteiner addmb">
+        <div class="conteiner">
           <h1 class="works-title visually-hidden">Зразки наших робіт</h1>
           <ul class="portfolio-buttons list">
             <li class="portfolio-btn-item">
@@ -87,19 +86,20 @@
               <button type="button" class="portfolio-btn">Маркетинг</button>
             </li>
           </ul>
-        </div>
-        <div class="conteiner">
+
           <ul class="portfolio-list list">
             <li class="portfolio-item">
-              <a class="works-item-link link" href="">
+              <a class="portfolio-item-link link" href="">
                 <img
                   src="./images/port1.jpg"
                   alt="displaying the site on laptop"
                   width="370"
                   height="294"
                 />
-                <h2 class="portfolio-subtitle">Технокач</h2>
-                <p class="portfolio-text">Веб-сайт</p>
+                <div class="portfilio-conteiner">
+                  <h2 class="portfolio-subtitle">Технокач</h2>
+                  <p class="portfolio-text">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
@@ -110,10 +110,12 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="portfolio-subtitle">
-                  Постер New Orlean vs Golden Star
-                </h2>
-                <p class="portfolio-text">Дизайн</p>
+                <div class="portfilio-conteiner">
+                  <h2 class="portfolio-subtitle">
+                    Постер New Orlean vs Golden Star
+                  </h2>
+                  <p class="portfolio-text">Дизайн</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
@@ -124,8 +126,10 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="portfolio-subtitle">Ресторан Seafood</h2>
-                <p class="portfolio-text">Додаток</p>
+                <div class="portfilio-conteiner">
+                  <h2 class="portfolio-subtitle">Ресторан Seafood</h2>
+                  <p class="portfolio-text">Додаток</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
@@ -136,8 +140,10 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="portfolio-subtitle">Проєкт Prime</h2>
-                <p class="portfolio-text">Маркетинг</p>
+                <div class="portfilio-conteiner">
+                  <h2 class="portfolio-subtitle">Проєкт Prime</h2>
+                  <p class="portfolio-text">Маркетинг</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
@@ -148,8 +154,10 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="portfolio-subtitle">Проєкт Boxes</h2>
-                <p class="portfolio-text">Додаток</p>
+                <div class="portfilio-conteiner">
+                  <h2 class="portfolio-subtitle">Проєкт Boxes</h2>
+                  <p class="portfolio-text">Додаток</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
@@ -160,9 +168,11 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="portfolio-subtitle">Inspiration has no Borders</h2>
-                <p class="portfolio-text">Веб-сайт</p></a
-              >
+                <div class="portfilio-conteiner">
+                  <h2 class="portfolio-subtitle">Inspiration has no Borders</h2>
+                  <p class="portfolio-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
               <a class="portfolio-item-link link" href="">
@@ -172,8 +182,10 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="portfolio-subtitle">Видання Limited Edition</h2>
-                <p class="portfolio-text">Дизайн</p>
+                <div class="portfilio-conteiner">
+                  <h2 class="portfolio-subtitle">Видання Limited Edition</h2>
+                  <p class="portfolio-text">Дизайн</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
@@ -184,8 +196,10 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="portfolio-subtitle">Проєкт LAB</h2>
-                <p class="portfolio-text">Маркетинг</p>
+                <div class="portfilio-conteiner">
+                  <h2 class="portfolio-subtitle">Проєкт LAB</h2>
+                  <p class="portfolio-text">Маркетинг</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
@@ -196,8 +210,10 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="portfolio-subtitle">Growing Business</h2>
-                <p class="portfolio-text">Додаток</p>
+                <div class="portfilio-conteiner">
+                  <h2 class="portfolio-subtitle">Growing Business</h2>
+                  <p class="portfolio-text">Додаток</p>
+                </div>
               </a>
             </li>
           </ul>
@@ -205,21 +221,21 @@
       </section>
     </main>
     <!-- footer -->
-    <footer class="basement">
-      <div class="basement-conteiner">
-        <a href="/" class="basement-logo link"
+    <footer class="footer">
+      <div class="conteiner">
+        <a href="/" class="footer-logo link"
           ><span class="logo-text">Web</span>Studio</a
         >
-        <address class="basement-address">
-          <p class="basement-text">м. Київ, пр-т Лесі Українки, 26</p>
-          <ul class="basement-list list">
-            <li>
-              <a href="mailto:info@devstudio.com" class="basement-contacts link"
+        <address class="footer-address">
+          <p class="footer-text">м. Київ, пр-т Лесі Українки, 26</p>
+          <ul class="footer-list list">
+            <li class="footer-item">
+              <a href="mailto:info@devstudio.com" class="footer-contacts link"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
-              <a href="tel:+380961111111" class="basement-contacts link"
+            <li class="footer-item">
+              <a href="tel:+380961111111" class="footer-contacts link"
                 >+38 096 111 11 11</a
               >
             </li>
