--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <!-- main -->
     <main>
       <!-- Герой -->
-      <section class="hero">
+      <section class="hero overlay">
         <div class="conteiner">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="hero-button">Замовити послугу</button>
